Cleanup in service